--- a/apresentacao/apresentacao_vitoria.Rmd
+++ b/apresentacao/apresentacao_vitoria.Rmd
@@ -58,14 +58,7 @@ class: inverse, center, middle
 
 # Cenário
 
-Estudo realizado em 2022 que visa contribuir para o debate sobre o fenômeno da gravidez na adolescência. Utiliza dados da PNAD-C para mostrar o perfil sociodemográfico (faixa etária, gênero, raça/cor, escolaridade) das adolescentes do ES. O estudo apresenta dados sobre nascidos vivos de mães adolescentes, no Brasil, Sudeste, ES e regiões da saúde, considerando período de 2010 a 2019 com base do SINASC (DATASUS). Apresenta indicadores sobre o perfil da mães adolescentes (estado civil, escolaridade, ocupação) e acerca do número de atendimentos pré-natal e tipo de parto dos nascidos vivos. Além disso, o estudo traz dados de: número de casamentos de crianças e adolescentes e notificação de estupro contra menores de 19 anos (SINAN-Ministério da Saúde). O estudo é parte do projeto Cadernos da Juventude.
-
----
-
-# Caderno sobre gravidez
-
-Segundo o caderno
-
+Estudo realizado em 2022, pelo IJSN, que visa contribuir para o debate sobre o fenômeno da gravidez na adolescência. Apresentou indicadores sobre o perfil da mães adolescentes (estado civil, escolaridade, ocupação) e acerca do número de atendimentos pré-natal e tipo de parto dos nascidos vivos. Além disso, o estudo traz dados de: número de casamentos de crianças e adolescentes e notificação de estupro contra menores de 19 anos (SINAN-Ministério da Saúde) entre os anos de 2010 e 2019. 
 
 ---
 
@@ -220,7 +213,7 @@ A estatística teste índice moran foi `r test_I[["estimate"]][["Moran I statist
 localmoran <- localmoran(base$casos, ccPesos_vizinhos)
 moran.map <- cbind(base, localmoran)
 
-tmap::tm_shape(moran.map, bbox = bb) +
+tmap::tm_shape(moran.map) +
   tmap::tm_fill(col = "Ii",
                 style = "quantile",
                 title = "Estatistica de Moran Local")+
